--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
             <input type="text" class="form-control" placeholder="Digite seu pokémon" aria-label="Example text with button addon" aria-describedby="button-addon1">
           </div>
         </section>
-        <section id="chart-container">
-          <canvas id="myChart"></canvas>
-        </section>
+        <section id="chart-container"></section>
       </div>
     </div>
     
