--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="input-group-prepend">
               <button class="btn btn-outline-info" type="button" id="button-addon1">buscar</button>
             </div>
-            <input type="text" class="form-control" placeholder="Digite seu pokémon" aria-label="Example text with button addon" aria-describedby="button-addon1">
+            <input type="text" class="form-control" placeholder="Nome ou ID" aria-label="Example text with button addon" aria-describedby="button-addon1">
           </div>
         </section>
         <section id="chart-container"></section>
